# snazy

./: .codecov.yaml  .gitignore  .goreleaser.yaml  .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  default.nix  dummy.go  flake.nix
.github/: dependabot.yml
.github/instructions/: dev.instructions.md
.github/workflows/: codecoverage.yaml  codecoverage.yaml.disabled  container.yaml  dependabot.yaml  nix.yaml  releaser.yaml  rust.yaml  weekly.yaml
.vale/styles/RedHat/: Conjunctions.yml  ConsciousLanguage.yml  Contractions.yml  Definitions.yml  Ellipses.yml  HeadingPunctuation.yml  Headings.yml  OxfordComma.yml  PassiveVoice.yml  ReleaseNotes.yml  SentenceLength.yml  Slash.yml  TermsErrors.yml
Formula/: snazy.rb
misc/: generate-release-notes.sh  gh-run-logview-snazy  make-release.sh
misc/completions/: _snazy  _snazy.ps1  snazy.bash  snazy.elv  snazy.fish
misc/formula-bump/: snazy.rb  update-formula.sh
src/: app.rs  cli.rs  config.rs  input.rs  main.rs  model.rs  parse.rs  parse_test.rs  parser.rs  pipeline.rs  render.rs  utils.rs
tests/: tests.rs
tests/testenv/: mod.rs
