[package]
# build = "build.rs"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
categories = ["command-line-utilities"]
description = "snazy is a snazzy json log viewer"
license = "Apache-2.0"
readme = "README.md"
name = "snazy"
version = "0.54.0"
edition = "2021"
keywords = ["json", "log", "viewer"]
repository = "https://github.com/chmouel/snazy"

[badges.appveyor]
repository = "chmouel/snazy"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
yansi = "1.0.1"
clap = { version = "4", features = ["suggestions", "derive", "env"] }
regex = "1.11.1"
tempfile = "3.9.0"
clap_complete = "4.5.36"
color-print = "0.3.6"
is-terminal = "0.4.13"
