[package]
# build = "build.rs"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
categories = ["command-line-utilities"]
description = "snazy is a snazzy json log viewer"
license = "Apache-2.0"
readme = "README.md"
name = "snazy"
version = "0.55.0"
edition = "2021"
keywords = ["json", "log", "viewer"]
repository = "https://github.com/chmouel/snazy"

[badges.appveyor]
repository = "chmouel/snazy"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
yansi = "1.0.1"
clap = { version = "4", features = ["suggestions", "derive", "env"] }
regex = "1.11.1"
tempfile = "3.19.1"
clap_complete = "4.5.47"
color-print = "0.3.7"
is-terminal = "0.4.16"
chrono-tz = "0.10.3"
