[package]
# build = "build.rs"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
categories = ["command-line-utilities"]
description = "snazy is a snazzy json log viewer"
license = "Apache-2.0"
readme = "README.md"
name = "snazy"
version = "0.58.1"
edition = "2021"
keywords = ["json", "log", "viewer"]
repository = "https://github.com/chmouel/snazy"

[badges.appveyor]
repository = "chmouel/snazy"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
yansi = "1.0.1"
clap = { version = "4", features = ["suggestions", "derive", "env"] }
regex = "1.11.3"
tempfile = "3.20.0"
clap_complete = "4.5.58"
color-print = "0.3.7"
is-terminal = "0.4.16"
chrono-tz = "0.10.3"
